--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<p>Hello 大家好</p>
-<p>我是migi，这是我的个人网站。 </p>
-<p>很高兴你来到这里.</p>
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
